[package]
name = "ray"
version = "0.1.0"
authors = ["Sergei Fomin <sergio-dna@yandex.ru>"]
edition = "2018"

[[bin]]
name = "rayd"
path = "bin/server.rs"

[[bin]]
name = "ray"
path = "bin/client.rs"

[dependencies]
bincode = "1.2"
byte_string = "1.0"
bytes = "0.4"
byteorder = "1.3"
clap = "2.33"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
log-panics = { version = "2.0", features = ["with-backtrace"] }
num_cpus = "1.11"
prost = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
tonic = "0.1.0-beta.1"

[build-dependencies]
tonic-build = "0.1.0-beta.1"
