[package]
name = "ray"
version = "0.1.0"
authors = ["Sergei Fomin <sergio-dna@yandex.ru>"]
edition = "2018"

[[bin]]
name = "rayd"
path = "bin/server.rs"

[[bin]]
name = "ray"
path = "bin/client.rs"

[[bin]]
name = "ray-benchmark"
path = "bin/benchmark.rs"

[dependencies]
bincode = "1.2"
byte_string = "1.0"
bytes = "0.4"
byteorder = "1.3"
clap = "2.33"
chrono = "0.4"
error-chain = "0.12"
futures = "0.3"
libc = "0.2"
log = { version = "0.4", features = ["std", "release_max_level_debug"] }
log-panics = { version = "2.0", features = ["with-backtrace"] }
metrics = "0.12"
metrics-core = "0.5"
metrics-runtime = "0.13"
nix = "0.17"
num_cpus = "1.11"
prost = "0.6"
rand = "0.7"
simplelog = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "blocking"] }
tonic = "0.1.0"

[build-dependencies]
tonic-build = "0.1.0"
